<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.WatermelonInsects">

    <androidx.appcompat.widget.Toolbar
        app:title="@string/watermelonInsects"
        android:id="@+id/toolbar"
        android:background="#FFE8C869"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="553dp"
        android:layout_weight="1"
        android:background="@drawable/ic_background">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="#04DAF4">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/insectsName"
                            android:textColor="#000"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/medicine"
                            android:textColor="#000"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/scale"
                            android:textColor="#000"
                            android:textSize="18sp"></TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/area"
                            android:textColor="#000"
                            android:textSize="18sp"></TextView>

                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/katuiInsects"
                            android:textColor="#000"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/medicine1"
                            android:textColor="#000"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fiveml"
                            android:textColor="#000"
                            android:textSize="18sp"></TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/oneBigha"
                            android:textColor="#000"
                            android:textSize="18sp"></TextView>

                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="#fff">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/dehaPoka"
                            android:textColor="#000"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/medicine2"
                            android:textColor="#000"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fiveml"
                            android:textColor="#000"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/oneBigha"
                            android:textColor="#000"
                            android:textSize="18sp"></TextView>

                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/guriPoka"
                            android:textColor="#000"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/medicine3"
                            android:textColor="#000"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fourml"
                            android:textColor="#000"
                            android:textSize="18sp"></TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/oneBigha"
                            android:textColor="#000"
                            android:textSize="18sp"></TextView>

                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="#fff">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/pataKamranoPoka"
                            android:textColor="#000"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/medicine4"
                            android:textColor="#000"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/fourfiveml"
                            android:textColor="#000"
                            android:textSize="18sp"></TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/oneBigha"
                            android:textColor="#000"
                            android:textSize="18sp"></TextView>

                    </TableRow>


                </TableLayout>

                <ImageView
                    android:layout_margin="10dp"
                    android:src="@mipmap/watermelon5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </ImageView>
                <ImageView
                    android:layout_margin="10dp"
                    android:src="@mipmap/watermelon7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </ImageView>
                <ImageView
                    android:layout_gravity="center"
                    android:src="@mipmap/watermelon6"
                    android:layout_width="300dp"
                    android:layout_height="300dp">

                </ImageView>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>


</LinearLayout>