<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    tools:context=".Activity.Watermelon">

    <androidx.appcompat.widget.Toolbar
        app:title="@string/watermelon"
        android:id="@+id/toolbar"
        android:background="#FFE8C869"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:textColor="#fff"
            android:id="@+id/btnWatermelonGline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:background="@drawable/button_ripple"
            android:text="@string/watermelonGuideline"
            android:textSize="20sp">

        </Button>



        <Button
            android:textColor="#fff"
            android:id="@+id/btnWF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:background="@drawable/button_ripple"
            android:text="@string/watermelonFertilizer"
            android:textSize="20sp">

        </Button>



        <Button
            android:id="@+id/btnWateremelonInsects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:textColor="#fff"
            android:background="@drawable/button_ripple"
            android:text="@string/watermelonInsects"
            android:textSize="20sp">

        </Button>


        <Button
            android:id="@+id/btnDisease"
            android:textColor="#fff"
            android:background="@drawable/button_ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:text="@string/watermelonDisease"
            android:textSize="20sp">

        </Button>



    </LinearLayout>



</LinearLayout>